<resources>
    <string name="app_name">DBSystemAndroid</string>
    <string name="Login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="querylostpassword">Forgot Your Password?</string>
    <string name="signuphere">Sign Up Here</string>
    <string name="signup">Sign Up</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>
    <string name="see_location">See Location</string>
    <string name="apply">Apply</string>
    <string name="call">Call</string>
    <string name="applicants">Applicants</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_as_donor">I am a Donor</string>
    <string name="login_as_charity">I am a Charity</string>
    <string name="request_booking">Request Booking</string>
    <string name="booking_request">Booking Request</string>
    <string name="post">Post</string>
    <string name="you_can_describe_what_you_need_exactly_here">You can describe what you need exactly here!</string>
    <string name="applicant_accept_confirmation">Are you sure you would like to accept this applicant?</string>
    <string name="applicant_reject_confirmation">Are you sure you would like to reject this applicant?</string>
    <string name="apply_confirmation">Are you sure you would like to apply to this listing?</string>
    <string name="close_listing_confirmation">Are you sure you would like to close this listing?</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="date_and_time">Date and Time</string>
    <string name="your_application">Your Application</string>
    <string name="registration_success_title">Your Registration was Successful!</string>
    <string name="registration_success_subtext">We have sent you an email confirmation! Please confirm your account by clicking the link in the email.</string>

    <string name="donorHistoryTitle">For -></string>
    <string name="industry">Industry</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="to">to</string>
    <string-array name="numbers">
        <item>Computer Science</item>
        <item>Programming</item>
        <item>Painting</item>
        <item>Math</item>
    </string-array>

    <string name="prefix_application_title">For </string>
    <string name="prefix_industry">Under </string>
    <string name="prefix_location">At </string>
    <string name="prefix_by_name">By </string>
    <string name="prefix_expiry">Expires at </string>
    <string name="prefix_created_at">Created at </string>
    <string name="prefix_contact_number">Contact Number : </string>

</resources>
