<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/authBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".launch.RegistrationActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/passwordInput"
            style="@style/subTitle.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/passwordText"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/firstNameText"
            app:layout_constraintTop_toBottomOf="@+id/firstNameText" />

        <TextView
            android:id="@+id/phoneNumberText"
            style="@style/subTitle.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="@+id/lastNameText"
            app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

        <EditText
            android:id="@+id/phoneNumberInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="@+id/phoneNumberText"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />

        <RadioGroup
            android:id="@+id/accountTypeRG"
            android:layout_width="212dp"
            android:layout_height="86dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordInput"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput">

            <TextView
                android:id="@+id/textView"
                style="@style/subTitle.small"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_weight="1"
                android:text="Account Type" />

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/subTitle.small"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_weight="1"
                android:text="Donor" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/subTitle.small"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_weight="1"
                android:text="Charity" />

        </RadioGroup>

        <TextView
            android:id="@+id/passwordText"
            style="@style/subTitle.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/usernameText"
            app:layout_constraintTop_toBottomOf="@+id/emailInput" />

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/firstNameInput"
            app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

        <TextView
            android:id="@+id/firstNameText"
            style="@style/subTitle.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/first_name"
            app:layout_constraintStart_toStartOf="@+id/signUpText"
            app:layout_constraintTop_toBottomOf="@+id/signUpText" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="288dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="onSignUpClicked"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/lastNameText"
            style="@style/subTitle.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/last_name"
            app:layout_constraintStart_toStartOf="@+id/firstNameText"
            app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

        <TextView
            android:id="@+id/confirmPasswordText"
            style="@style/subTitle.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirmPassword"
            app:layout_constraintStart_toStartOf="@+id/passwordText"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <EditText
            android:id="@+id/confirmPasswordInput"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordText"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordText" />

        <TextView
            android:id="@+id/usernameText"
            style="@style/subTitle.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/phoneNumberInput"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberInput" />

        <TextView
            android:id="@+id/signUpText"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/signup"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailInput"
            style="@style/subTitle.small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/usernameText"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>